minor improvements discovered while testing